--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-legacy": "^1.7.1",
     "@vue/compiler-sfc": "^3.2.31",
     "vite": "^2.8.0"
   },
